# libtorrent_dart

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  analysis_options.yaml  pubspec.yaml
.github/actions/build-native/: action.yml
.github/workflows/: release.yml  tests.yml
docs/: API_COMPATIBILITY.md  API_PORT.md  BUILD.md  LIBTORRENT_API_PARITY.md  LIBTORRENT_API_SPEC.md  SPEC_PROGRESS.md
example/: example.dart  torrent_session.dart  ui.dart
hook/: build.dart
lib/: libtorrent_dart.dart  libtorrent_dart_ffi.dart
lib/src/: libtorrent_dart.dart  libtorrent_dart_ffi.dart
lib/src/ffi/: native_functions.dart  native_structs.dart  utils.dart
lib/src/high_level/: callbacks.dart  error.dart  marshaling.dart  models.dart  session.dart  tags.dart  torrent_handle.dart
mobile_test/: README.md  pubspec.yaml
mobile_test/android/app/: build.gradle.kts
mobile_test/android/app/src/main/: AndroidManifest.xml
mobile_test/android/app/src/main/kotlin/dev/senzmaker/libtorrent_dart_example/: MainActivity.kt
mobile_test/integration_test/: libtorrent_dart_ffi_core_test.dart  libtorrent_dart_ffi_torrent_control_test.dart  libtorrent_dart_session_test.dart  libtorrent_dart_torrent_test.dart
mobile_test/integration_test/support/: test_helpers.dart
mobile_test/ios/Runner/: Info.plist
mobile_test/ios/Runner.xcodeproj/: project.pbxproj
mobile_test/test/: widget_test.dart
scripts/: build_openssl_android.ps1  build_openssl_android.sh  build_openssl_windows.ps1  release.dart
src/c/: library.cpp  libtorrent.h
test/: libtorrent_dart_ffi_core_test.dart  libtorrent_dart_ffi_test.dart  libtorrent_dart_ffi_torrent_control_test.dart  libtorrent_dart_session_test.dart  libtorrent_dart_test.dart  libtorrent_dart_torrent_test.dart
test/support/: test_helpers.dart
